# geos-lookup

./: CMakeLists.txt  LICENSE.md  README.md  SpatialLookup.cpp  SpatialLookup.h
src/: SpatialLookup.cpp  SpatialLookup.h
